[gd_scene load_steps=7 format=2]

[ext_resource path="res://fonts/about.tres" type="DynamicFont" id=1]
[ext_resource path="res://levels/bottomhud.tscn" type="PackedScene" id=2]
[ext_resource path="res://fonts/start.tres" type="DynamicFont" id=3]
[ext_resource path="res://backgounds/night-sky-at-ceres.jpg" type="Texture" id=4]
[ext_resource path="res://levels/ui/musictest.gd" type="Script" id=5]

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0, 0.8, 0, 1 )

[node name="Musictest" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -640.0
margin_top = -360.0
margin_right = -640.0
margin_bottom = -360.0
script = ExtResource( 5 )

[node name="Night Sky" type="TextureRect" parent="."]
margin_right = 1280.0
margin_bottom = 720.0
texture = ExtResource( 4 )

[node name="Info" type="Label" parent="."]
margin_left = 28.0
margin_top = 94.0
margin_right = 322.0
margin_bottom = 164.0
custom_fonts/font = ExtResource( 1 )

[node name="Game name" type="Label" parent="."]
margin_top = 3.0
margin_right = 1280.0
margin_bottom = 73.0
custom_fonts/font = ExtResource( 3 )
text = "MENU_MUSICTEST"
align = 1
valign = 1

[node name="Stop" type="Label" parent="."]
margin_left = 5.0
margin_top = 672.0
margin_right = 230.0
margin_bottom = 700.0
custom_fonts/font = ExtResource( 1 )
text = "LABEL_STOPPLAYBACK"

[node name="Bottomhud" parent="." instance=ExtResource( 2 )]

[node name="BoxContainer" type="HBoxContainer" parent="."]
margin_left = 640.0
margin_top = 91.0
margin_right = 1280.0
margin_bottom = 651.0

[node name="VBoxContainer" type="VBoxContainer" parent="BoxContainer"]
margin_right = 171.0
margin_bottom = 560.0

[node name="Title Screen" type="Button" parent="BoxContainer/VBoxContainer"]
margin_right = 171.0
margin_bottom = 30.0
custom_fonts/font = ExtResource( 1 )
custom_styles/focus = SubResource( 3 )
text = "SONG0_LABEL"

[node name="Disclaimer, Settings, Stores" type="Button" parent="BoxContainer/VBoxContainer"]
margin_top = 34.0
margin_right = 171.0
margin_bottom = 64.0
custom_fonts/font = ExtResource( 1 )
custom_styles/focus = SubResource( 3 )
text = "SONG1_LABEL"

[node name="Testrooms" type="Button" parent="BoxContainer/VBoxContainer"]
margin_top = 68.0
margin_right = 171.0
margin_bottom = 98.0
custom_fonts/font = ExtResource( 1 )
custom_styles/focus = SubResource( 3 )
text = "SONG2_LABEL"

[node name="Friendly challenge" type="Button" parent="BoxContainer/VBoxContainer"]
margin_top = 102.0
margin_right = 171.0
margin_bottom = 132.0
custom_fonts/font = ExtResource( 1 )
custom_styles/focus = SubResource( 3 )
text = "SONG3_LABEL"

[node name="School nursery" type="Button" parent="BoxContainer/VBoxContainer"]
margin_top = 136.0
margin_right = 171.0
margin_bottom = 166.0
custom_fonts/font = ExtResource( 1 )
custom_styles/focus = SubResource( 3 )
text = "SONG4_LABEL"

[node name="Overworld (Ceres)" type="Button" parent="BoxContainer/VBoxContainer"]
margin_top = 170.0
margin_right = 171.0
margin_bottom = 200.0
custom_fonts/font = ExtResource( 1 )
custom_styles/focus = SubResource( 3 )
text = "SONG5_LABEL"

[node name="Boss fight (Ceres)" type="Button" parent="BoxContainer/VBoxContainer"]
margin_top = 204.0
margin_right = 171.0
margin_bottom = 234.0
custom_fonts/font = ExtResource( 1 )
custom_styles/focus = SubResource( 3 )
text = "SONG6_LABEL"

[node name="Result" type="Button" parent="BoxContainer/VBoxContainer"]
margin_top = 238.0
margin_right = 171.0
margin_bottom = 268.0
custom_fonts/font = ExtResource( 1 )
custom_styles/focus = SubResource( 3 )
text = "SONG7_LABEL"

[node name="Overworld (Earth)" type="Button" parent="BoxContainer/VBoxContainer"]
margin_top = 272.0
margin_right = 171.0
margin_bottom = 302.0
custom_fonts/font = ExtResource( 1 )
custom_styles/focus = SubResource( 3 )
text = "SONG8_LABEL"

[node name="The Zubmarine Zone" type="Button" parent="BoxContainer/VBoxContainer"]
margin_top = 306.0
margin_right = 171.0
margin_bottom = 336.0
custom_fonts/font = ExtResource( 1 )
custom_styles/focus = SubResource( 3 )
text = "SONG9_LABEL"

[node name="Radioactive Desert" type="Button" parent="BoxContainer/VBoxContainer"]
margin_top = 340.0
margin_right = 171.0
margin_bottom = 370.0
custom_fonts/font = ExtResource( 1 )
custom_styles/focus = SubResource( 3 )
text = "SONG10_LABEL"

[node name="Natasha’s Theme" type="Button" parent="BoxContainer/VBoxContainer"]
margin_top = 374.0
margin_right = 171.0
margin_bottom = 404.0
custom_fonts/font = ExtResource( 1 )
custom_styles/focus = SubResource( 3 )
text = "SONG11_LABEL"

[node name="VBoxContainer2" type="VBoxContainer" parent="BoxContainer"]
margin_left = 175.0
margin_right = 364.0
margin_bottom = 560.0

[node name="Dungeon of Destruction" type="Button" parent="BoxContainer/VBoxContainer2"]
margin_right = 189.0
margin_bottom = 30.0
custom_fonts/font = ExtResource( 1 )
custom_styles/focus = SubResource( 3 )
text = "SONG12_LABEL"

[node name="Final Boss Fight" type="Button" parent="BoxContainer/VBoxContainer2"]
margin_top = 34.0
margin_right = 189.0
margin_bottom = 64.0
custom_fonts/font = ExtResource( 1 )
custom_styles/focus = SubResource( 3 )
text = "SONG13_LABEL"

[node name="Ending Theme" type="Button" parent="BoxContainer/VBoxContainer2"]
margin_top = 68.0
margin_right = 189.0
margin_bottom = 98.0
custom_fonts/font = ExtResource( 1 )
custom_styles/focus = SubResource( 3 )
text = "SONG14_LABEL"

[node name="Credits 1" type="Button" parent="BoxContainer/VBoxContainer2"]
margin_top = 102.0
margin_right = 189.0
margin_bottom = 132.0
custom_fonts/font = ExtResource( 1 )
custom_styles/focus = SubResource( 3 )
text = "SONG15_LABEL"

[node name="Credits 2" type="Button" parent="BoxContainer/VBoxContainer2"]
margin_top = 136.0
margin_right = 189.0
margin_bottom = 166.0
custom_fonts/font = ExtResource( 1 )
custom_styles/focus = SubResource( 3 )
text = "SONG16_LABEL"

[node name="Credits 3" type="Button" parent="BoxContainer/VBoxContainer2"]
margin_top = 170.0
margin_right = 189.0
margin_bottom = 200.0
custom_fonts/font = ExtResource( 1 )
custom_styles/focus = SubResource( 3 )
text = "SONG17_LABEL"

[node name="The Magic School" type="Button" parent="BoxContainer/VBoxContainer2"]
margin_top = 204.0
margin_right = 189.0
margin_bottom = 234.0
custom_fonts/font = ExtResource( 1 )
custom_styles/focus = SubResource( 3 )
text = "SONG18_LABEL"

[node name="Deep Forest" type="Button" parent="BoxContainer/VBoxContainer2"]
margin_top = 238.0
margin_right = 189.0
margin_bottom = 268.0
custom_fonts/font = ExtResource( 1 )
custom_styles/focus = SubResource( 3 )
text = "SONG19_LABEL"

[node name="Boss Fight (Earth)" type="Button" parent="BoxContainer/VBoxContainer2"]
margin_top = 272.0
margin_right = 189.0
margin_bottom = 302.0
custom_fonts/font = ExtResource( 1 )
custom_styles/focus = SubResource( 3 )
text = "SONG20_LABEL"

[node name="ALSA" type="Button" parent="BoxContainer/VBoxContainer2"]
margin_top = 306.0
margin_right = 189.0
margin_bottom = 336.0
custom_fonts/font = ExtResource( 1 )
custom_styles/focus = SubResource( 3 )
text = "SONG21_LABEL"

[node name="Elysium" type="Button" parent="BoxContainer/VBoxContainer2"]
margin_top = 340.0
margin_right = 189.0
margin_bottom = 370.0
custom_fonts/font = ExtResource( 1 )
custom_styles/focus = SubResource( 3 )
text = "SONG22_LABEL"

[node name="Back" type="Button" parent="BoxContainer/VBoxContainer2"]
margin_top = 374.0
margin_right = 189.0
margin_bottom = 404.0
custom_fonts/font = ExtResource( 1 )
custom_styles/focus = SubResource( 3 )
text = "BUTTON_RETURN"

[connection signal="pressed" from="BoxContainer/VBoxContainer/Title Screen" to="." method="_on_title_screen_pressed"]
[connection signal="pressed" from="BoxContainer/VBoxContainer/Disclaimer, Settings, Stores" to="." method="_on_disclaimer_settings_stores_pressed"]
[connection signal="pressed" from="BoxContainer/VBoxContainer/Testrooms" to="." method="_on_testrooms_pressed"]
[connection signal="pressed" from="BoxContainer/VBoxContainer/Friendly challenge" to="." method="_on_friendly_challenge_pressed"]
[connection signal="pressed" from="BoxContainer/VBoxContainer/School nursery" to="." method="_on_school_nursery_pressed"]
[connection signal="pressed" from="BoxContainer/VBoxContainer/Overworld (Ceres)" to="." method="_on_overworld_ceres_pressed"]
[connection signal="pressed" from="BoxContainer/VBoxContainer/Boss fight (Ceres)" to="." method="_on_boss_fight_ceres_pressed"]
[connection signal="pressed" from="BoxContainer/VBoxContainer/Result" to="." method="_on_result_pressed"]
[connection signal="pressed" from="BoxContainer/VBoxContainer/Overworld (Earth)" to="." method="_on_overworld_earth_pressed"]
[connection signal="pressed" from="BoxContainer/VBoxContainer/The Zubmarine Zone" to="." method="_on_the_zubmarine_zone_pressed"]
[connection signal="pressed" from="BoxContainer/VBoxContainer/Radioactive Desert" to="." method="_on_radioactive_desert_pressed"]
[connection signal="pressed" from="BoxContainer/VBoxContainer/Natasha’s Theme" to="." method="_on_natashas_theme_pressed"]
[connection signal="pressed" from="BoxContainer/VBoxContainer2/Dungeon of Destruction" to="." method="_on_dungeon_of_destruction_pressed"]
[connection signal="pressed" from="BoxContainer/VBoxContainer2/Final Boss Fight" to="." method="_on_final_boss_fight_pressed"]
[connection signal="pressed" from="BoxContainer/VBoxContainer2/Ending Theme" to="." method="_on_ending_theme_pressed"]
[connection signal="pressed" from="BoxContainer/VBoxContainer2/Credits 1" to="." method="_on_credits_1_pressed"]
[connection signal="pressed" from="BoxContainer/VBoxContainer2/Credits 2" to="." method="_on_credits_2_pressed"]
[connection signal="pressed" from="BoxContainer/VBoxContainer2/Credits 3" to="." method="_on_credits_3_pressed"]
[connection signal="pressed" from="BoxContainer/VBoxContainer2/The Magic School" to="." method="_on_the_magic_school_pressed"]
[connection signal="pressed" from="BoxContainer/VBoxContainer2/Deep Forest" to="." method="_on_deep_forest_pressed"]
[connection signal="pressed" from="BoxContainer/VBoxContainer2/Boss Fight (Earth)" to="." method="_on_boss_fight_earth_pressed"]
[connection signal="pressed" from="BoxContainer/VBoxContainer2/ALSA" to="." method="_on_alsa_pressed"]
[connection signal="pressed" from="BoxContainer/VBoxContainer2/Elysium" to="." method="_on_elysium_pressed"]
[connection signal="pressed" from="BoxContainer/VBoxContainer2/Back" to="." method="_on_back_pressed"]
